# vite-react-electron-babylon

./: .gitignore  Cargo.toml  README.md  config.json  electron.ts  index.html  initialization.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
custom-font-packages/: README.md
custom-font-packages/meshwriter/: index.js  package-lock.json  package.json
custom-font-packages/meshwriter-font/: config.js
custom-font-packages/meshwriter/fonts/: pangmenzhengdao.js
public/: Cargo.toml
public/model/: banner.glb  banner.gltf
public/src/: lib.rs
src/: GS.tsx  electron-preload.js  main.tsx  manifest.json  paintWorklet.js  react-preload.tsx
src/css/: base.css  component_rule.css  layout.css  style.css
src/plugin/meshwriter/: meshwriter.index.js
src/plugin/meshwriter-font/: meshwriter-font.index.js
src/script/: GS.tsx  attr.tsx  components.tsx  electron-preload.js  index.d.ts  lib.tsx  paintWorklet.ts  react-preload.tsx  tool.tsx
src/script/components/: BabylonBox.tsx  Banner.tsx  babylon copy.tsx  babylon.tsx  btn.tsx  perlin.ts  templete.tsx  version_info.tsx  woniuopenTool.tsx
src/script/meshwriter.declare/: meshwriter.d.ts
src/script/plugin/meshwriter/: index.js  meshwriter.ES.d.ts
src/types/: index.d.ts  meshwriter.d.ts
